<resources>
    <string name="app_name">Demo</string>
    <string name="notice_sign_up">还没有账号？注册</string>
    <string name="login_in_button">Login In</string>
    <string name="sign_up">Sign up</string>
    <string name="password_hint">请输入密码</string>
    <string name="account_hint">请输入账号</string>
    <string name="certain_password_hint">请再次输入密码</string>
    <string name="todo">TODO</string>
    <string name="shou_ye">首页</string>
    <string name="tu_biao">图表</string>
    <string name="li_cai">理财</string>
    <string name="wo_de">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="defaultMoney">￥0.00</string>
    <string name="yinshi">饮食</string>
    <string name="gouwu">购物</string>
    <string name="jiaotong">交通</string>
    <string name="lingshi">零食</string>
    <string name="yule">娱乐</string>
    <string name="shui">水</string>
    <string name="dian">电</string>
    <string name="wangluo">网络</string>
    <string name="zhufang">住房</string>
    <string name="jiaoyu">教育</string>
    <string name="yuer">育儿</string>
    <string name="lvxing">旅行</string>
    <string name="hufu">护肤品</string>
    <string name="riyong">日用品</string>
    <string name="xiuche">修车</string>
    <string name="chongwu">宠物</string>
    <string name="gongzi">工资</string>
    <string name="qita">其他</string>
    <string name="shejiao">社交</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="sub">—</string>
    <string name="_0">0</string>
    <string name="point">·</string>
    <string name="delete">X</string>
    <string name="add">+</string>
    <string name="certain">确认</string>
    <string name="_0_00">￥0.00</string>
    <string name="updateAccount">修改账号</string>
    <string name="updatePSW">修改密码</string>
    <string name="update_password">update password</string>
    <string name="update_account">update account</string>
    <string name="update_ac">请输入新的账户名</string>
    <string name="old_psw">请输入旧密码</string>
    <string name="certain_new_psw_hint">请再次输入新密码</string>
    <string name="new_psw_hint">请输入新密码</string>
    <string name="certain_up_psw">确认修改</string>
</resources>
