<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A8C1F3"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:gravity="center"
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textStyle="italic"
            android:layout_weight="1"
            android:textSize="50sp"
            android:text="@string/sign_up" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:layout_marginTop="60dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_account"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/account_hint"
            android:letterSpacing="0.1"
            android:inputType="text"
            android:autofillHints="@string/account_hint"
            android:lines="1"
            android:ellipsize="end"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#a686ba" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:paddingStart="25dp"
        android:paddingEnd="25dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_password"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/password_hint"
            android:inputType="text"
            android:letterSpacing="0.1"
            tools:ignore="TextFields"
            android:autofillHints="@string/password_hint"
            android:lines="1"
            android:ellipsize="end"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#a686ba" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:paddingStart="25dp"
        android:paddingEnd="25dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_password"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/certain_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/certain_password_hint"
            android:inputType="text"
            android:letterSpacing="0.1"
            tools:ignore="TextFields"
            android:autofillHints="@string/certain_password_hint"
            android:lines="1"
            android:ellipsize="end"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#a686ba" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/to_login_in"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/toright_src"
            android:background="@drawable/login_in_button"
            android:contentDescription="@string/todo" />
    </LinearLayout>

</LinearLayout>