<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A8C1F3"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/notebookImgView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:srcCompat="@drawable/ic_notebook_color"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="60dp"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingEnd="25dp">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_account"
                    android:contentDescription="@string/todo" />

                <EditText
                    android:id="@+id/account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/account_hint"
                    android:letterSpacing="0.1"
                    android:singleLine="true"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#a686ba" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingEnd="25dp">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_password"
                    android:contentDescription="@string/todo" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:letterSpacing="0.1"
                    android:importantForAutofill="no" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#a686ba" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/login_in_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/login_in_button"
                    android:text="@string/login_in_button"
                    android:textColor="@color/ic_launcher_background" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/to_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/notice_sign_up"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="italic" />
    </LinearLayout>
</LinearLayout>