<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/update_view_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/me_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/overwater"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/notebookImgView"
            android:layout_width="@android:dimen/thumbnail_width"
            android:layout_height="@android:dimen/thumbnail_height"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_me" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="@android:dimen/app_icon_size">

            <Button
                android:id="@+id/to_update_account"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/notification_large_icon_height"
                android:layout_marginStart="@android:dimen/app_icon_size"
                android:background="@null"
                android:text="@string/update_account"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="@android:dimen/app_icon_size"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="@android:dimen/app_icon_size">

            <Button
                android:id="@+id/to_update_psw"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/notification_large_icon_height"
                android:layout_marginStart="@android:dimen/app_icon_size"
                android:background="@null"
                android:text="@string/update_password"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="@android:dimen/app_icon_size"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
